[package]
name = "lua-framework"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["luaf-include", "luaf-libffi"]

    [workspace.dependencies]
    mlua = { version = "0.10", features = ["luajit", "vendored"] }
    log = { version = "0.4", features = ["std"] }
    anyhow = "1.0"
    thiserror = "2.0"
    parking_lot = { version = "0.12", features = ["arc_lock"] }
    serde = { version = "1.0", features = ["derive"] }
    rand = "0.8"

[lib]
crate-type = ["cdylib"]

[dependencies]
luaf-include = { path = "./luaf-include" }

mlua = { workspace = true, features = ["send", "serialize"] }

# 如果本地没有以下依赖，请使用注释的版本

safetyhook = { path = "../../safetyhook-pure-rs" }
# safetyhook = { git = "https://github.com/eigeen/safetyhook-rs.git" }

cimgui = { path = "../../cimgui-linking-rs/cimgui" }
# cimgui = { git = "https://github.com/eigeen/cimgui-rs.git" }

windows = { version = "0.58", features = [
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_System_Console",
    "Win32_System_Threading",
] }
# frida-gum 动态Hook
frida-gum = { version = "0.15", features = [
    "auto-download",
    "invocation-listener",
] }

log.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
serde.workspace = true
rand.workspace = true
serde_json = "1.0"
bitflags = "2.6"
semver = "1.0"
chrono = "0.4.39"
colored = "2.2.0"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
env_logger = "0.11.5"
