[package]
name = "luaf-libffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
luaf-include = { path = "../luaf-include" }

mlua = { workspace = true, features = ["send", "serialize"] }

# libffi 动态调用函数
libffi = "3.2"

log = "0.4"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0.216", features = ["derive"] }

[dev-dependencies]
env_logger = "0.11.5"
